fix:どんなポイント名でも「ぷりずむを付与する」になる問題を修正

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -495,6 +495,7 @@ unregister: "登録を解除"
 passwordLessLogin: "パスワードレスログイン"
 passwordLessLoginDescription: "パスワードを使用せず、セキュリティキーやパスキーなどのみでログインします"
 resetPassword: "パスワードをリセット"
+grantPoints: "{pointName}を付与する"
 newPasswordIs: "新しいパスワードは「{password}」です"
 reduceUiAnimation: "UIのアニメーションを減らす"
 share: "共有"
