Fix(Frontend): Misskeyをなるべく消す

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1515,7 +1515,7 @@ _achievements:
   earnedAt: "獲得日時"
   _types:
     _notes1:
-      title: "just setting up my tp4ny"
+      title: "just setting up my Type4ny"
       description: "初めてノートを投稿した"
       flavor: "良いType4nyライフを！"
     _notes10:
