--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -454,6 +454,9 @@ antennaExcludeBots: "Botアカウントを除外"
 antennaKeywordsDescription: "スペースで区切るとAND指定になり、改行で区切るとOR指定になります"
 notifyAntenna: "新しいノートを通知する"
 withFileAntenna: "ファイルが添付されたノートのみ"
+_antennaKeywordNullError:
+  title: "受信キーワードがありません"
+  description: "受信キーワードが入力されていません。"
 enableServiceworker: "ブラウザへのプッシュ通知を有効にする"
 antennaUsersDescription: "ユーザー名を改行で区切って指定します"
 caseSensitive: "大文字小文字を区別する"
