Fix(Frontend): 表記揺れの修正 (#42) Fix(Frontend): ポイント付与、剥奪のUIの改善 (#42)

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -109,7 +109,7 @@ note: "ノート"
 notes: "ノート"
 following: "フォロー"
 followers: "フォロワー"
-points: "ポイント"
+point: "ポイント"
 followsYou: "フォローされています"
 createList: "リスト作成"
 manageLists: "リストの管理"
@@ -499,6 +499,7 @@ passwordLessLogin: "パスワードレスログイン"
 passwordLessLoginDescription: "パスワードを使用せず、セキュリティキーやパスキーなどのみでログインします"
 resetPassword: "パスワードをリセット"
 grantPoints: "{pointName}を付与する"
+revokePoints: "{pointName}を剥奪する"
 newPasswordIs: "新しいパスワードは「{password}」です"
 reduceUiAnimation: "UIのアニメーションを減らす"
 share: "共有"
@@ -1354,6 +1355,7 @@ createdAntennas: "作成したアンテナ"
 addToDefaultEmojiPicker: "デフォルトのプロファイルに追加する"
 clipNoteLimitExceeded: "これ以上このクリップにノートを追加できません。"
 inboxModeration: "Inboxのモデレーション"
+pointsMustBePositive: "ポイントは正の値である必要があります。"
 
 _delivery:
   status: "配信状態"
