Enhance: ログインボーナスのポイントを公開したり非公開にした利できるように (#42)

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -961,6 +961,8 @@ off: "オフ"
 emailRequiredForSignup: "アカウント登録にメールアドレスを必須にする"
 enableGDPRMode: "GDPRモードを有効にする"
 enableLoginBonus: "ログインボーナスを有効にする"
+loginBonusIsVisible: "ログインボーナスのポイントを公開にする"
+loginBonusIsVisibleDescription: "あなたがもらったログインボーナスのポイントを他のユーザーから見れるようにします。"
 unread: "未読"
 filter: "フィルタ"
 controlPanel: "コントロールパネル"
