--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -169,6 +169,8 @@ mute: "ミュート"
 unmute: "ミュート解除"
 renoteMute: "リノートをミュート"
 renoteUnmute: "リノートのミュートを解除"
+mutedReactions: "リアクションのミュート"
+remoteCustomEmojiMuted: "リモートの絵文字をミュート"
 block: "ブロック"
 unblock: "ブロック解除"
 suspend: "凍結"
