--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1111,6 +1111,7 @@ gotInvalidResponseError: "サーバーの応答が無効です"
 gotInvalidResponseErrorDescription: "サーバーがダウンまたはメンテナンスしている可能性があります。しばらくしてから再度お試しください。"
 thisPostMayBeAnnoying: "この投稿は迷惑になる可能性があります。"
 thisPostMayBeAnnoyingHome: "ホームに投稿"
+thisPostMayBeAnnoyingCW: "CWをつけて投稿"
 thisPostMayBeAnnoyingCancel: "やめる"
 thisPostMayBeAnnoyingIgnore: "このまま投稿"
 collapseRenotes: "リノートのスマート省略"
