Enhance: CWの本文に直接絵文字を挿入できるように

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1392,6 +1392,7 @@ lockdown: "ロックダウン"
 pleaseSelectAccount: "アカウントを選択してください"
 availableRoles: "利用可能なロール"
 acknowledgeNotesAndEnable: "注意事項を理解した上でオンにします。"
+cwInsertEmoji: "CWに絵文字を挿入"
 
 _accountSettings:
   requireSigninToViewContents: "コンテンツの表示にログインを必須にする"
