Enhance: サーバーミュートのリアクションミュートをオプトアウトした

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1393,6 +1393,7 @@ pleaseSelectAccount: "アカウントを選択してください"
 availableRoles: "利用可能なロール"
 acknowledgeNotesAndEnable: "注意事項を理解した上でオンにします。"
 cwInsertEmoji: "CWに絵文字を挿入"
+reactionAndServerMute: "サーバーと一緒にリアクションもミュートする"
 
 _accountSettings:
   requireSigninToViewContents: "コンテンツの表示にログインを必須にする"
